# audiobook

./: .env.example  .gitignore  Dockerfile  README.md  REMAINING_TASKS.md  TODO.md  main.py  pyproject.toml  requirements-remote.txt
assets/voices/: README.md
books/absalon/: Faulkner-Absalon-Absalon.txt  chapitre_1_tts.txt  chapitre_2_tts.txt  chapitre_3_tts.txt  chapitre_4_tts.txt  chapitre_5_tts.txt  chapitre_6_tts.txt  chapitre_7_tts.txt  chapitre_8_tts.txt  chapitre_9_tts.txt
books/l_insoutenable/: doc.txt  partie-1.txt
scripts/: deploy_vastai.sh  setup_vastai.sh
src/: __main__.py  cli.py  setting.py
src/audio/: pipeline.py  types.py  verification.py
src/audio/generators/: __init__.py  base.py  chatterbox.py  eleven_labs.py
src/audio/voices/: registry.py
src/book/: __init__.py  base.py  catalog.py  l_insoutenable.py  pdf_book.py  registry.py  types.py
src/book/books/: __init__.py  absolon.py  l_insoutenable.py
src/book/processor/: base.py  text.py
src/book/processors/: base.py  content.py  pdf.py  test.py  text.py
src/llm/: openai.py
src/orchestration/: __init__.py  combine.py  parallel.py  robust.py  throughput.py  vastai.py
