[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audiobook"
version = "0.1.0"
description = "Auto-audiobook project with TTS."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "elevenlabs>=1.50.3",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "nltk>=3.9.1",
    "openai>=1.58.1",
    "pdfplumber>=0.11.4",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "click>=8.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "chatterbox-tts",
    "ml-dtypes>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.1.6"
]

[tool.uv.sources]
chatterbox-tts = { git = "https://github.com/resemble-ai/chatterbox.git" }

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
audiobook = "src.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.ruff]
target-version = "py311"
line-length = 100
lint.select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"
